# boalang

./: .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  annotated.html  astprinter_8hpp.html  astprinter_8hpp__incl.map  astprinter_8hpp_source.html  build.sh  classASTPrinter-members.html  classASTPrinter.html  classAdditionExpr-members.html  classAdditionExpr.html  classAdditionExpr__coll__graph.map  classAdditionExpr__coll__graph.md5  classAdditionExpr__inherit__graph.md5  classAsTypeExpr-members.html  classAsTypeExpr.html  classAsTypeExpr__coll__graph.map  classAsTypeExpr__coll__graph.md5  classAsTypeExpr__inherit__graph.md5  classAssignStmt-members.html  classAssignStmt.html  classAssignStmt__coll__graph.map  classAssignStmt__coll__graph.md5  classBinaryExpr-members.html  classBinaryExpr.html  classBinaryExpr__coll__graph.map  classBinaryExpr__coll__graph.md5  classBlockStmt-members.html  classBlockStmt.html  classBlockStmt__coll__graph.map  classBlockStmt__coll__graph.md5  classBlockStmt__inherit__graph.md5  classCallContext-members.html  classCallContext.html  classCallExpr-members.html  (+354 more)
.github/workflows/: cmake.yml
docs/html/: annotated.html  astprinter_8hpp.html  astprinter_8hpp__incl.md5  astprinter_8hpp_source.html  classASTPrinter-members.html  classASTPrinter.html  classASTPrinter__coll__graph.md5  classAdditionExpr-members.html  classAdditionExpr.html  classAdditionExpr__coll__graph.map  classAsTypeExpr-members.html  classAsTypeExpr.html  classAsTypeExpr__inherit__graph.map  classAssignStmt-members.html  classAssignStmt.html  classBinaryExpr-members.html  classBinaryExpr.html  classBinaryExpr__coll__graph.map  classBinaryExpr__coll__graph.md5  classBinaryExpr__inherit__graph.map  classBinaryExpr__inherit__graph.md5  classBlockStmt-members.html  classBlockStmt.html  classBlockStmt__inherit__graph.map  classCallContext-members.html  classCallContext.html  classCallExpr-members.html  classCallExpr.html  classCallExpr__inherit__graph.map  classCallExpr__inherit__graph.md5  classCallStmt-members.html  classCallStmt.html  classCallStmt__coll__graph.map  classCallStmt__coll__graph.md5  classCastExpr-members.html  classCastExpr.html  classCastExpr__coll__graph.map  classDivisionExpr-members.html  classDivisionExpr.html  classDivisionExpr__inherit__graph.map  (+329 more)
docs/html/search/: all_0.js  all_1.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_c.js  classes_d.js  classes_f.js  enums_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  (+26 more)
example/: program.boa  program2.boa  program3.boa  program4.boa
html/: annotated.html  astprinter_8hpp.html  astprinter_8hpp_source.html  classASTPrinter-members.html  classASTPrinter.html  classASTPrinter__inherit__graph.map  classAdditionExpr-members.html  classAdditionExpr.html  classAsTypeExpr-members.html  classAsTypeExpr.html  classAssignStmt-members.html  classAssignStmt.html  classAssignStmt__inherit__graph.map  classAssignStmt__inherit__graph.md5  classBinaryExpr-members.html  classBinaryExpr.html  classBlockStmt-members.html  classBlockStmt.html  classCallContext-members.html  classCallContext.html  classCallExpr-members.html  classCallExpr.html  classCallStmt-members.html  classCallStmt.html  classCastExpr-members.html  classCastExpr.html  classCastExpr__coll__graph.md5  classCastExpr__inherit__graph.md5  classDivisionExpr-members.html  classDivisionExpr.html  classEqualCompExpr-members.html  classEqualCompExpr.html  classEqualCompExpr__inherit__graph.map  classExpr-members.html  classExpr.html  classExprType-members.html  classExprType.html  classExprVisitor-members.html  classExprVisitor.html  classExpr__inherit__graph.md5  (+227 more)
html/search/: all_1.js  all_8.js  all_9.js  all_b.js  classes_a.js  classes_e.js  enums_0.js  functions_6.js  functions_8.js  searchdata.js  typedefs_0.js  typedefs_3.js  variables_2.js  variables_3.js  variables_5.js  variables_8.js  variables_9.js  variables_a.js
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_1.js  classes_11.js  classes_2.js  classes_3.js  classes_7.js  classes_b.js  files_2.js  files_3.js  functions_1.js  functions_5.js  functions_7.js  functions_9.js  functions_b.js  pages_0.js  searchdata.js  typedefs_1.js  variables_0.js  variables_b.js
src/: CMakeLists.txt  main.cpp
src/ast/: astprinter.cpp  astprinter.hpp
src/expr/: expr.cpp  expr.hpp  exprvisitor.hpp
src/interpreter/: interpreter.cpp  interpreter.hpp
src/interpreter/scope/: scope.cpp  scope.hpp
src/lexer/: lexer.cpp  lexer.hpp
src/parser/: parser.cpp  parser.hpp
src/parser/stmt/: stmt.hpp  stmt_visitor.hpp
src/source/: source.cpp  source.hpp
src/stmt/: stmt.cpp  stmt.hpp  stmtvisitor.hpp
src/token/: token.cpp  token.hpp
src/utils/: errors.hpp  overloaded.tpp  position.hpp
tests/: CMakeLists.txt  utils.hpp
tests/interpreter/: interpreter_utils.hpp  test_function.cpp  test_general.cpp  test_struct.cpp  test_variant.cpp
tests/lexer/: test_lexer.cpp
tests/parser/: test_parser.cpp
tests/source/: test_source.cpp
tests/token/: test_token.cpp
